Algumas correções importantes na interface

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Adaptação mobile-->
-  <title>Happy</title>
+  <title>AdotaPET</title>
 
   <link rel="icon" href="/images/logo-icon.png" />
   <link rel="stylesheet" href="/CSS/main.css" />
@@ -27,11 +27,11 @@
       </header>
 
       <main>
-        <h1 class="animate-up">Leve felicidade para o mundo</h1>
+        <h1 class="animate-up">Gatos, cachorros, etc.</h1>
 
         <section class="visit">
           <p class="animate-up">
-            Visite orfanatos e mude o dia de muitas crianças
+           Um PET é simplesmente a sua melhor compania <3 
           </p>
 
           <a href="/orphanages" title="Visite orfanatos" class="animate-up">
