--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -82,12 +82,12 @@
             {{#if orphanage.open_on_weekends}}
             <div class="open-on-weekends open">
               <img src="/images/info.svg" alt="informaçao" />
-              atendemos fim de semana
+              Aceita Ligação!
             </div>
             {{else}}
             <div class="open-on-weekends closed">
               <img src="/images/info-red.svg" alt="informaçao" />
-              não atendemos fim de semana
+              NÃO aceita Ligação"
             </div>
             {{/if}}
           </div>
