--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -30,8 +30,8 @@
     <aside class="animate-right">
       <header>
         <img src="/images/map-marker.svg " alt="Happy" />
-        <h2>Escolha um orfanato no mapa</h2>
-        <p>Muitas crianças estão esperando sua visita :)</p>
+        <h2>Veja quantos PETs para doação</h2>
+        <p>Escolha um ponto no mapa e descubra o nome do PET :D</p>
       </header>
 
       <footer>
