--- a/public/CSS/page-landigs.css
+++ b/public/CSS/page-landigs.css
@@ -1,8 +1,8 @@
 #page-landing {
   background: linear-gradient(
     329.54deg,
-    #29b6d1 0%,
-    #00c7c7 100%
+    #aabbbb 0%,
+    #ccbbcc 100%
   ); /* Transição de cor*/
   text-align: center;
   min-height: 100vh;
