--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -27,7 +27,7 @@
       </header>
 
       <main>
-        <h1 class="animate-up">Gatos, cachorros, etc.</h1>
+        <h1 class="animate-up">Adote cachorros, gatos, etc.</h1>
 
         <section class="visit">
           <p class="animate-up">
