--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -69,7 +69,7 @@
 
           <hr />
 
-          <h2>Intruções para visita</h2>
+          <h2>Sobre o doador</h2>
           <p>
             {{orphanage.instructions}}
           </p>
