--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Adaptação mobile-->
-  <title>{{orphanage.name}} | Happy</title>
+  <title>{{orphanage.name}} | AdotaPET</title>
 
   <!-- https://leafletjs.com/examples/quick-start/ -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -87,7 +87,7 @@
             {{else}}
             <div class="open-on-weekends closed">
               <img src="/images/info-red.svg" alt="informaçao" />
-              NÃO aceita Ligação"
+              NÃO aceita Ligação
             </div>
             {{/if}}
           </div>
