--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Adaptação mobile-->
-  <title>Localize um orfanato | Happy</title>
+  <title>Localize um doador | AdotaPET</title>
 
   <!-- https://leafletjs.com/examples/quick-start/ -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -30,8 +30,8 @@
     <aside class="animate-right">
       <header>
         <img src="/images/map-marker.svg " alt="Happy" />
-        <h2>Veja quantos PETs para doação</h2>
-        <p>Escolha um ponto no mapa e descubra o nome do PET :D</p>
+        <h2>Veja quantos PETs esperando a sua adoção</h2>
+        <p>Escolha um ponto no mapa e descubra o nome do SEU PET :D</p>
       </header>
 
       <footer>
