--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Adaptação mobile-->
-  <title>Adicionar um Orfanato | Happy</title>
+  <title>Adicionar um PET | AdotaPET</title>
 
   <!-- https://leafletjs.com/examples/quick-start/ -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
