Correção Required no campo Sobre

--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -32,7 +32,7 @@
 <body>
   <div id="page-create-orphanage">
     <aside class="animate-right sidebar">
-      <img src="/images/map-marker.svg" alt="Happy" />
+      <img src="/images/map-marker.svg" alt="AdotaPET" />
 
       <footer>
         <button onclick="history.back()">
@@ -63,7 +63,7 @@
           <div class="input-block">
             <label for="about">Sobre <span> Máximo de 300 caracteres </span>
             </label>
-            <textarea id="about" name="about" requirid></textarea>
+            <textarea id="about" name="about" required ></textarea>
           </div>
 
           <div class="input-block">
