--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -19,7 +19,7 @@
   <div id="page-landing">
     <div id="container">
       <header>
-        <img class="animate-up" id="logo" src="/images/logo.svg" alt="Logomarca de Happy" />
+        <img class="animate-up" id="logo" src="/images/logo.svg" alt="Logomarca de AdotaPET" />
         <div class="location animate-up">
           <strong>Itacoatiara</strong>
           <p>Amazonas</p>
