--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -31,7 +31,7 @@
 <body>
   <div id="page-orphanage">
     <aside class="animate-right sidebar">
-      <img src="/images/map-marker.svg" alt="Happy" />
+      <img src="/images/map-marker.svg" alt="AdotaPET" />
 
       <footer>
         <button onclick="history.back()">
