--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -29,7 +29,7 @@
   <div id="page-orphanages">
     <aside class="animate-right">
       <header>
-        <img src="/images/map-marker.svg " alt="Happy" />
+        <img src="/images/map-marker.svg " alt="AdotaPET" />
         <h2>Veja quantos PETs esperando a sua adoção</h2>
         <p>Escolha um ponto no mapa e descubra o nome do SEU PET :D</p>
       </header>
