--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -92,7 +92,7 @@
             {{/if}}
           </div>
 
-          <a href="https://api.whatsapp.com/send?l=pt_BR&phone={{orphanage.whatsapp}}&text=oi,quero conversar sobre visitas no {{orphanage.name}}"
+          <a href="https://api.whatsapp.com/send?l=pt_BR&phone={{orphanage.whatsapp}}&text= oi,gostaria de saber mais sobre a adoção do PET {{orphanage.name}} :D ADOTAPET"
             target="_blank" class="primary-button" type="button">
             <img src="/images/whatsapp.svg" alt="Chamar no whatsapp" />
             Entrar em contato
