--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -67,7 +67,7 @@
           </div>
 
           <div class="input-block">
-            <label for="Whatsapp">Número de Whatsapp - ERRO - MUDAR PARA SOBRE O DOADOR</label>
+            <label for="Whatsapp">WhatsApp para contato</label>
             <input id="whatsapp" name="whatsapp" required />
           </div>
 
